<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="multiNN_algoSelectDesc">Select the algorithm to enable</string>
    <string name="multiNN_audioSceneDesc">Audio Scene Classification</string>
    <string name="multiNN_humanActivityDesc">Human Activity Classification</string>
    <string name="multiNN_comboDesc">MultiNN Classification</string>
    <string name="algorithm_running" translatable="false">Running</string>
    <string name="algorithm_paused" translatable="false">Paused</string>
    <string name="activityRecognition_unknownImageDesc">Unknown</string>
    <string name="activityRecognition_stationaryImageDesc">Stationary</string>
    <string name="activityRecognition_walkingImageDesc">Walking</string>
    <string name="activityRecognition_fastWalkingImageDesc">Fast walking</string>
    <string name="activityRecognition_joggingImageDesc">Jogging</string>
    <string name="activityRecognition_bikingImageDesc">Biking</string>
    <string name="activityRecognition_drivingImageDesc">Driving</string>
    <string name="activityRecognition_stairsImageDesc">Stairs</string>
    <string name="activityRecognition_adultNotInCar">Adult is not in the Car</string>
    <string name="activityRecognition_adultInCar">Adult is in the Car</string>
    <string name="activityRecognition_started">Activity recognition started</string>
    <string name="activityRecognition_waitingData">Waiting data…</string>
    <string name="audioClassification_waitingData">Waiting data…</string>
    <string name="audioScene_indoor" translatable="false">Indoor</string>

    <string name="audio_scene_unknown" translatable="false">Unknown</string>
    <string name="audio_scene_inVehicle" translatable="false">In vehicle</string>
    <string name="audio_scene_outdoor" translatable="false">Outdoor</string>
    <string name="audio_scene_indoor" translatable="false">Indoor</string>
    <string name="audio_baby_not_crying" translatable="false">Baby not Crying</string>
    <string name="audio_baby_crying" translatable="false">Baby Crying</string>
    <string name="audio_scene_off" translatable="false">ASC Off</string>
    <string name="audio_scene_on" translatable="false">ASC On</string>
    <string name="audio_scene_error" translatable="false">Error</string>

    <string name="multiNN_quiet">Quiet…</string>
    <string name="multiNN_warning">Warning!!!</string>
</resources>