<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.st.BlueMS.demos.AudioClassification.AudioClassificationFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/audio_scene_classification_indoorImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:layout_margin="16dp"
        android:contentDescription="@string/audio_scene_indoor"
        app:srcCompat="@drawable/audio_scene_inside"/>

    <ImageView
        android:id="@+id/audio_scene_classification_outdoorImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:layout_margin="16dp"
        android:contentDescription="@string/audio_scene_outdoor"
        app:srcCompat="@drawable/audio_scene_outside"/>

    <ImageView
        android:id="@+id/audio_scene_classification_invehicleImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:layout_margin="16dp"
        android:contentDescription="@string/audio_scene_inVehicle"
        app:srcCompat="@drawable/audio_scene_invehicle"/>

</LinearLayout>